<resources>
    <string name="app_name">DongSan2Mong</string>
    <string name="menu_title_map">map</string>
    <string name="menu_title_wishlist">wishlist</string>
    <string name="menu_title_comparison">comparison</string>
    <string name="menu_title_planner">planner</string>

    <string name="map_option_1">지역</string>
    <string name="map_option_2">거래유형</string>
    <string name="map_option_3">방 갯수</string>
    <string name="map_option_4">편의시설</string>
    <string name="map_option_5">건물유형</string>
    <string name="map_option_6">평형</string>
    <string name="map_option_7">층 수</string>
    <string name="map_option_8">옵션</string>

    <string name="signup_title">회원가입</string>

    <string-array name="yearSpinner">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
    </string-array>

    <string-array name="roomNum">
        <item>오픈형</item>
        <item>분리형</item>
        <item>복층형</item>
        <item>방2</item>
        <item>방3</item>
        <item>방4</item>
        <item>최대</item>
    </string-array>

    <string-array name="convType">
        <item>엘리베이터</item>
        <item>편의점</item>
        <item>세탁소</item>
        <item>대형마트</item>
        <item>버스정류장</item>
    </string-array>

    <string-array name="buildType">
        <item>아파트</item>
        <item>빌라</item>
        <item>오피스텔</item>
        <item>상가</item>
    </string-array>

    <string-array name="floorNum">
        <item>지상층</item>
        <item>반지하</item>
        <item>옥탑</item>
    </string-array>

    <string-array name="inclType">
        <item>싱크대</item>
        <item>에어컨</item>
        <item>신발장</item>
        <item>세탁기</item>
        <item>냉장고</item>
        <item>옷장</item>
        <item>책상</item>
    </string-array>

    <string-array name="saleType1">
        <item>최소</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>1,000</item>
        <item>2,000</item>
        <item>3,000</item>
        <item>4,000</item>
        <item>5,000</item>
        <item>6,000</item>
        <item>7,000</item>
        <item>8,000</item>
        <item>9,000</item>
        <item>1억</item>
        <item>1억 2,000</item>
        <item>1억 5,000</item>
        <item>1억 7,000</item>
        <item>2억</item>
        <item>2억 5,000</item>
        <item>3억</item>
        <item>3억 5,000</item>
        <item>4억</item>
        <item>5억</item>
        <item>7억</item>
        <item>10억</item>
        <item>12억</item>
        <item>15억</item>
        <item>20억</item>
        <item>1</item>
    </string-array>

    <string-array name="saleType2">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>1</item>
    </string-array>


    <array name="initial_slider_values">
        <item>2.0</item>
        <item>6.0</item>
    </array>


    <!--
    <string name="saleType1_1">전체</string>
    <string name="saleType1_2">5백만 이하</string>
    <string name="saleType1_3">~1500만</string>
    <string name="saleType1_4">~3000만</string>
    <string name="saleType1_5">~5000만</string>
    <string name="saleType1_6">~1억</string>
    <string name="saleType1_7">~2.5억</string>
    <string name="saleType1_8">2.5억 이상</string>

    <string name="salyType2_1">전체</string>
    <string name="salyType2_2">20만 이하</string>
    <string name="salyType2_3">~50만</string>
    <string name="salyType2_4">~100만</string>
    <string name="salyType2_5">~250만</string>
    <string name="salyType2_6">250만 이상</string>
    !-->
</resources>