<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/main_blue"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="17dp"
            android:src="@drawable/icon_search_white" />

        <ImageView
            android:id="@+id/sidemenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="17dp"
            android:src="@drawable/icon_menu_white" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/mapFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.naver.maps.map.MapFragment" />

        <LinearLayout
            android:id="@+id/mapOptionBarLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:background="@color/white"
            android:clickable="true"
            >

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbars="none"
                android:soundEffectsEnabled="false"
                android:overScrollMode="never">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:text="" />

                    <TextView
                        android:id="@+id/map_option_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="7dp"
                        android:background="@drawable/background_map_option_expand"
                        android:fontFamily="@font/elicedigitalbaeum"
                        android:paddingHorizontal="6dp"

                        android:paddingVertical="3dp"
                        android:text="@string/map_option_1"

                        android:textColor="@color/gray_unselected_option"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/map_option_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="7dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_2"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="7dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_3"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="7dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_4"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="7dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_5"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />
                </LinearLayout>

            </HorizontalScrollView>

            <ImageView
                android:id="@+id/mapOpenOptionBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_map_arrow_down" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mapOptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="right"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:clickable="true"
                android:background="@drawable/background_map_option_expand" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/map_option_1_extend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/background_map_option_expand"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"
                        android:textAlignment="center"

                        android:text="@string/map_option_1"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_2_extend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_3"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_3_extend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_5"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_4_extend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_7"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/map_option_5_extend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"
                        android:textAlignment="center"

                        android:text="@string/map_option_2"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_6_extend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_4"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_7_extend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_6"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                    <TextView
                        android:id="@+id/map_option_8_extend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="6dp"
                        android:paddingVertical="3dp"

                        android:text="@string/map_option_8"
                        android:textColor="@color/gray_unselected_option"

                        android:textSize="16sp"
                        android:fontFamily="@font/elicedigitalbaeum" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="초기화" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="저장" />

            </LinearLayout>

            <ImageView
                android:id="@+id/mapCloseOptionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@color/white"
                android:src="@drawable/icon_map_arrow_up"
                android:clickable="true"
                />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>